<resources>
    <string name="app_name">Market</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_enter">Entrar</string>
    <string name="etx_email">Email</string>
    <string name="etx_password">Password</string>
    <string name="txt_forgot_password">Esqueci minha senha!</string>
    <string name="menu_home">Home</string>
    <string name="menu_store">Store</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>